[package]
name = "clangd-parser"
version = "0.1.3"
edition = "2021"
description = "Crate that parses clangd symbol cache, to then leverage in other tools."
license = "MIT"
repository = "https://github.com/moosedoc/clangd-parser"

[features]
post-process = []

[dependencies]
async-std = "1.12.0"
clap = { version = "4.5.2", features = ["derive"] }
griff = { version = "0.1.0" }
libflate = "2.0.0"
