[package]
name = "clangd-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.5.2", features = ["derive"] }
griff = { version = "0.1.0", path = "../griff" }
libflate = "2.0.0"
tempfile = "3.10.1"
